--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -28,6 +28,7 @@
 }
 
 body, html {
+  position: absolute;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -64,6 +65,14 @@ canvas,
   text-transform: uppercase;
   overflow: hidden;
   transform: translate(-50%, -50%) translate(250px, -100px);
+
+
+}
+
+html.phone .title {
+
+  transform: translate(-50%, -50%) translate(0px, -150px);
+
 }
 
 .title b {
@@ -120,10 +129,17 @@ svg {
   /*transition: transform 750ms ease-out, opacity 550ms ease-out;*/
 
 }
+.phone svg {
+  display: none;
+}
 
 svg text {
   letter-spacing: 5px;
   transition: opacity 550ms ease-out;
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */
 }
 
 svg .circle--first {
@@ -136,6 +152,22 @@ svg .circle--second {
 
 svg rect {
   transition: transform 450ms ease-in;
+}
+.mobile-fallback {
+  display: none;
+
+}
+html.phone .mobile-fallback {
+  display: block;
+  position: absolute;
+  text-align: center;
+  width: 90%;
+  top: 50%;
+  left: 50%;
+  font-family: 'Brandon Grotesque';
+  font-size: 21px;
+  transform: translate(-50%, -50%);
+  color: #324874;
 }
 /*
 svg:hover {
